@@ -3,17 +3,16 @@ module Selenium
     module Android
       class Bridge < Remote::Bridge
 
-        DEFAULT_URL = "http://#{Platform.localhost}:8080/hub"
+        DEFAULT_URL = "http://#{Platform.localhost}:8080/hub/"
 
-        def initialize(opts = nil)
-          if opts
-            super
-          else
-            super(
-              :url => DEFAULT_URL,
-              :desired_capabilities => capabilities
-            )
-          end
+        def initialize(opts = {})
+          remote_opts = {
+            :url                  => opts.fetch(:url, DEFAULT_URL),
+            :desired_capabilities => opts.fetch(:desired_capabilities, capabilities),
+            :http_client          => opts[:http_client]
+          }
+
+          super remote_opts
         end
 
         def browser
@@ -23,7 +22,8 @@ module Selenium
         def driver_extensions
           [
             DriverExtensions::TakesScreenshot,
-            DriverExtensions::Rotatable
+            DriverExtensions::Rotatable,
+            DriverExtensions::HasInputDevices
           ]
         end
 
